--- a/Centerlessblog/uwsgi.ini
+++ b/Centerlessblog/uwsgi.ini
@@ -1,17 +1,18 @@
 [uwsgi]
-#配置和nginx连接的socket连接
-socket = 127.0.0.1:8001
-#配置项目路径，项目的所在目录
-chdir = /data/CenterBlog/Centerlessblog/
+;配置和nginx连接的socket连接
+socket=127.0.0.1:8000
+;Http通信方式   IP地址:端口号
+chdir=/home/data/CenterBlog/Centerlessblog
+wsgi-file=Centerlessblog/wsgi.py
+process=4
+threads=8
+;服务的pid记录文件
+pidfile=Centerlessblog.pid
+daemonize=Centerlessblog.log
+;开启主进程管理模式
+master=true
 
-#指定加载WSGI文件
-wsgi-file = Centerlessblog/wsgi.py
-;callable = app
-#配置启动的进程数
-processes = 4
-#虚拟环境路径
-virtualenv = /envs/blog/
-py-autoreload=1
-#配置启动管理主进程
-master=True
+
+
+
 
